fix color contrast error

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -225,7 +225,7 @@ picture {
 }
 
 #discover-main #welcome-message {
-    color: white;
+    color: black;
     width: 100%;
     font-size: 1.4em;
     text-align: center;
